// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for GroupsMenuFilter Test GroupsMenuFilter for translationWords 1`] = `
<div
  id="groups-menu-filter"
>
  <GroupsMenuFilterBubble
    key="showInvalidated"
    name="showInvalidated"
    setFilter={[Function]}
    text="tools.invalidated"
  />
  <GroupsMenuFilterBubble
    key="showBookmarks"
    name="showBookmarks"
    setFilter={[Function]}
    text="tools.bookmarks"
  />
  <GroupsMenuFilterBubble
    key="showSelections"
    name="showSelections"
    setFilter={[Function]}
    text="tools.selected"
  />
  <GroupsMenuFilterBubble
    key="showNoSelections"
    name="showNoSelections"
    setFilter={[Function]}
    text="tools.no_selection"
  />
  <GroupsMenuFilterBubble
    key="showVerseEdits"
    name="showVerseEdits"
    setFilter={[Function]}
    text="tools.verse_edit"
  />
  <GroupsMenuFilterBubble
    key="showComments"
    name="showComments"
    setFilter={[Function]}
    text="tools.comments"
  />
</div>
`;

exports[`Tests for GroupsMenuFilter Test GroupsMenuFilter for wordAlignment 1`] = `
<div
  id="groups-menu-filter"
>
  <GroupsMenuFilterBubble
    key="showInvalidated"
    name="showInvalidated"
    setFilter={[Function]}
    text="tools.invalidated"
  />
  <GroupsMenuFilterBubble
    key="showBookmarks"
    name="showBookmarks"
    setFilter={[Function]}
    text="tools.bookmarks"
  />
  <GroupsMenuFilterBubble
    key="showSelections"
    name="showSelections"
    setFilter={[Function]}
    text="tools.aligned"
  />
  <GroupsMenuFilterBubble
    key="showNoSelections"
    name="showNoSelections"
    setFilter={[Function]}
    text="tools.no_alignment"
  />
  <GroupsMenuFilterBubble
    key="showVerseEdits"
    name="showVerseEdits"
    setFilter={[Function]}
    text="tools.verse_edit"
  />
  <GroupsMenuFilterBubble
    key="showComments"
    name="showComments"
    setFilter={[Function]}
    text="tools.comments"
  />
</div>
`;
